--- a/res/img/.htaccess
+++ b/res/img/.htaccess
@@ -2,14 +2,14 @@
   RewriteEngine On
 
   ##### TRY FIRST the file appended with .webp (ex. test.jpg.webp) #####
-  # Does browser explicitly support webp?
+  # Is the browser Chrome?
   RewriteCond %{HTTP_USER_AGENT} Chrome [OR]
   # OR Is request from Page Speed
   RewriteCond %{HTTP_USER_AGENT} "Google Page Speed Insights" [OR]
   # OR does this browser explicitly support webp
   RewriteCond %{HTTP_ACCEPT} image/webp
-  # AND is the request a jpg or png?
-  RewriteCond %{REQUEST_URI} ^(.+)\.(?:jpe?g|png)$
+  # AND is the request a jpg, png or gif?
+  RewriteCond %{REQUEST_URI} ^(.+)\.(?:jpe?g|png|gif)$
   # AND does a .ext.webp image exist?
   RewriteCond %{DOCUMENT_ROOT}%{REQUEST_URI}.webp -f
   # THEN send the webp image and set the env var webp
@@ -19,12 +19,12 @@
   RewriteCond %{HTTP_USER_AGENT} Chrome [OR]
   RewriteCond %{HTTP_USER_AGENT} "Google Page Speed Insights" [OR]
   RewriteCond %{HTTP_ACCEPT} image/webp
-  # AND is the request a jpg or png? (also grab the basepath %1 to match in the next rule)
-  RewriteCond %{REQUEST_URI} ^(.+)\.(?:jpe?g|png)$
-  # AND does a .ext.webp image exist?
+  # AND is the request a jpg, png or gif? (also grab the basepath %1 to match in the next rule)
+  RewriteCond %{REQUEST_URI} ^(.+)\.(?:jpe?g|png|gif)$
+  # AND does a .webp image exist?
   RewriteCond %{DOCUMENT_ROOT}/%1.webp -f
   # THEN send the webp image and set the env var webp
-  RewriteRule (.+)\.(?:jpe?g|png)$ $1.webp [NC,T=image/webp,E=webp,L]
+  RewriteRule (.+)\.(?:jpe?g|png|gif)$ $1.webp [NC,T=image/webp,E=webp,L]
 
 </IfModule>
 <IfModule mod_headers.c>
